syntax = "proto3";

package sorting;

// The greeting service definition.
service SortService {
  // Sends a greeting
  rpc SortSayHello (SortRequest) returns (SortReply) {}
}

// The request message containing the user's name.
message SortRequest {
  string name = 1;
}

// The response message containing the greetings
message SortReply {
  string message = 1;
}
